first-rx(Nextjs,Reactjs,Graphql,Nodejs,Express,Kubernetes,Scss,Docker)/infra/k8s/coupon-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coupon-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coupon
  template:
    metadata:
      labels:
        app: coupon
    spec:
      containers:
        - name: coupon
          image: insonia78/services/coupon
---
apiVersion: v1
kind: Service
metadata:
  name: coupon-srv
spec:
  selector:
    app: coupon
  ports:
    - name: coupon
      protocol: TCP
      port: 6000
      targetPort: 6000
