first-rx(Nextjs,Reactjs,Graphql,Nodejs,Express,Kubernetes,Scss,Docker)/infra/k8s/location-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: location-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: location
  template:
    metadata:
      labels:
        app: location
    spec:
      containers:
        - name: location
          image: insonia78/services/location
---
apiVersion: v1
kind: Service
metadata:
  name: location-srv
spec:
  selector:
    app: location
  ports:
    - name: location
      protocol: TCP
      port: 5000
      targetPort: 5000
