first-rx(Nextjs,Reactjs,Graphql,Nodejs,Express,Kubernetes,Scss,Docker)/infra/k8s/ingress-srv.yaml
# apiVersion: networking.k8s.io/v1beta1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-srv
  annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/use-regex: 'true'
     nginx.ingress.kubernetes.io/use-http2: 'false'
spec:
  rules:
    - host: firstrx.dev
      http:
        paths:
          # - path: /text-message/graphql
          #   pathType: Prefix
          #   backend:
          #     service:
          #        name: text-messages-srv
          #        port: 
          #         number: 7000
          - path: /coupon/graphql
            pathType: Exact
            backend:
              service:
                 name: coupon-srv
                 port: 
                   number: 6000  
          - path: /location/graphql
            pathType: Exact
            backend:
              service:
                 name: location-srv
                 port: 
                   number: 5000
          - path: /prescriptions/graphql
            pathType: Exact
            backend:
              service:
                 name: prescriptions-srv
                 port: 
                   number: 4000                      
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                 name: client-srv
                 port: 
                   number: 3000
